fixed header spacing

--- a/app/assets/stylesheets/my-styles.css.scss
+++ b/app/assets/stylesheets/my-styles.css.scss
@@ -22,7 +22,7 @@ background-image: -webkit-gradient(
 );
 }
 
-.content { margin-top: 4%; }
+.content { margin-top: 60px; }
 
 .my-container { 
   margin-left: 2%;
